webinar form updated

--- a/webinar.html
+++ b/webinar.html
@@ -185,7 +185,7 @@
 				</div>
 			</div>
 			<div class="col-md-5 col-12">
-				<form action='https://forms.zohopublic.in/DeHaat/form/NeedAnyHelp/formperma/v0pTPnhN5o_1xrxr2OQsFXAIe9IFSSb3tnIMSxaPzfY/htmlRecords/submit' name='form' method='POST' onSubmit='javascript:document.charset="UTF-8"; return zf_ValidateAndSubmit();' accept-charset='UTF-8' enctype='multipart/form-data' id='form' class="border-none">
+				<form action='https://forms.zohopublic.in/DeHaat/form/Untitled24/formperma/tfHhaD-azbgWzaAUHnbJin13PmsiYtSVhNH_JPKpoec/htmlRecords/submit' name='form' method='POST' onSubmit='javascript:document.charset="UTF-8"; return zf_ValidateAndSubmit();' accept-charset='UTF-8' enctype='multipart/form-data' id='form' class="border-none">
 					<input type="hidden" name="zf_referrer_name" value="">
 					<input type="hidden" class="form-control" name="zf_redirect_url" value="">
 					<input type="hidden" class="form-control" name="zc_gad" value="">
@@ -220,7 +220,7 @@
 									<p id="PhoneNumber_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
 								</div>
 							</li>
-					<!---------Phone Starts Here----------> 
+							<!---------Phone Starts Here----------> 
 							<li  class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">व्हाट्सएप नंबर
 							<em class="zf-important">*</em>
 							</label>
@@ -230,23 +230,69 @@
 							<span> <input type="text" compname="PhoneNumber1" class="form-control w-100" name="PhoneNumber1_countrycode" maxlength="20" checktype="c7" value="" phoneFormat="1" isCountryCodeEnabled=false fieldType="11" id="international_PhoneNumber1_countrycode" valType="number" phoneFormatType="1"/>
 							<label>Number</label> </span>
 							<div class="zf-clearBoth"></div></div><p id="PhoneNumber1_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-							</div><div class="zf-clearBoth"></div></li><!---------Phone Ends Here----------> 
-					<!---------Email Starts Here---------->  
-							<li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">ईमेल 
-							</label>
-							<div class="zf-tempContDiv"><span> <input class="form-control w-100" fieldType=9  type="text" maxlength="255" name="Email" checktype="c5" value="example@domain.com"/></span> <p id="Email_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-							</div><div class="zf-clearBoth"></div></li><!---------Email Ends Here---------->  
-					<!---------Single Line Starts Here---------->
-							<li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">आपका स्थान 
+							</div><div class="zf-clearBoth"></div></li>
+							<!---------section----------> 
+							<li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">राज्य
 							<em class="zf-important">*</em>
 							</label>
-							<div class="zf-tempContDiv"><span> <input class="form-control w-100" type="text" name="SingleLine" checktype="c1" value="" maxlength="255" fieldType=1 /></span> <p id="SingleLine_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
+							<div class="zf-tempContDiv">
+								<select class="zf-form-sBox form-control" name="Dropdown" checktype="c1"><option selected="true" value="-Select-">-Select-</option>
+							<option value="&#x913;&#x921;&#x93f;&#x936;&#x93e;">&#x913;&#x921;&#x93f;&#x936;&#x93e;</option>
+							<option value="&#x906;&#x902;&#x927;&#x94d;&#x930;&#x20;&#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;">&#x906;&#x902;&#x927;&#x94d;&#x930; &#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;</option>
+							<option value="&#x905;&#x930;&#x941;&#x923;&#x93e;&#x91a;&#x932;&#x20;&#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;">&#x905;&#x930;&#x941;&#x923;&#x93e;&#x91a;&#x932; &#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;</option>
+							<option value="&#x905;&#x938;&#x92e;">&#x905;&#x938;&#x92e;</option>
+							<option value="&#x92c;&#x93f;&#x939;&#x93e;&#x930;">&#x92c;&#x93f;&#x939;&#x93e;&#x930;</option>
+							<option value="&#x91b;&#x924;&#x94d;&#x924;&#x940;&#x938;&#x917;&#x922;">&#x91b;&#x924;&#x94d;&#x924;&#x940;&#x938;&#x917;&#x922;</option>
+							<option value="&#x917;&#x94b;&#x935;&#x93e;">&#x917;&#x94b;&#x935;&#x93e;</option>
+							<option value="&#x917;&#x941;&#x91c;&#x930;&#x93e;&#x924;">&#x917;&#x941;&#x91c;&#x930;&#x93e;&#x924;</option>
+							<option value="&#x939;&#x930;&#x92f;&#x93e;&#x923;&#x93e;">&#x939;&#x930;&#x92f;&#x93e;&#x923;&#x93e;</option>
+							<option value="&#x939;&#x93f;&#x92e;&#x93e;&#x91a;&#x932;&#x20;&#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;">&#x939;&#x93f;&#x92e;&#x93e;&#x91a;&#x932; &#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;</option>
+							<option value="&#x91c;&#x92e;&#x94d;&#x92e;&#x942;&#x20;&#x914;&#x930;&#x20;&#x915;&#x936;&#x94d;&#x92e;&#x940;&#x930;">&#x91c;&#x92e;&#x94d;&#x92e;&#x942; &#x914;&#x930; &#x915;&#x936;&#x94d;&#x92e;&#x940;&#x930;</option>
+							<option value="&#x91d;&#x93e;&#x930;&#x916;&#x902;&#x921;">&#x91d;&#x93e;&#x930;&#x916;&#x902;&#x921;</option>
+							<option value="&#x915;&#x930;&#x94d;&#x928;&#x93e;&#x91f;&#x915;">&#x915;&#x930;&#x94d;&#x928;&#x93e;&#x91f;&#x915;</option>
+							<option value="&#x915;&#x947;&#x930;&#x932;">&#x915;&#x947;&#x930;&#x932;</option>
+							<option value="&#x92e;&#x927;&#x94d;&#x92f;&#x20;&#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;">&#x92e;&#x927;&#x94d;&#x92f; &#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;</option>
+							<option value="&#x92e;&#x939;&#x93e;&#x930;&#x93e;&#x937;&#x94d;&#x91f;&#x94d;&#x930;">&#x92e;&#x939;&#x93e;&#x930;&#x93e;&#x937;&#x94d;&#x91f;&#x94d;&#x930;</option>
+							<option value="&#x92e;&#x923;&#x93f;&#x92a;&#x941;&#x930;">&#x92e;&#x923;&#x93f;&#x92a;&#x941;&#x930;</option>
+							<option value="&#x92e;&#x947;&#x918;&#x93e;&#x932;&#x92f;">&#x92e;&#x947;&#x918;&#x93e;&#x932;&#x92f;</option>
+							<option value="&#x92e;&#x93f;&#x91c;&#x94b;&#x930;&#x92e;">&#x92e;&#x93f;&#x91c;&#x94b;&#x930;&#x92e;</option>
+							<option value="&#x928;&#x917;&#x93e;&#x932;&#x948;&#x902;&#x921;">&#x928;&#x917;&#x93e;&#x932;&#x948;&#x902;&#x921;</option>
+							<option value="&#x909;&#x921;&#x93c;&#x940;&#x938;&#x93e;">&#x909;&#x921;&#x93c;&#x940;&#x938;&#x93e;</option>
+							<option value="&#x92a;&#x902;&#x91c;&#x93e;&#x92c;">&#x92a;&#x902;&#x91c;&#x93e;&#x92c;</option>
+							<option value="&#x930;&#x93e;&#x91c;&#x938;&#x94d;&#x925;&#x93e;&#x928;">&#x930;&#x93e;&#x91c;&#x938;&#x94d;&#x925;&#x93e;&#x928;</option>
+							<option value="&#x938;&#x93f;&#x915;&#x94d;&#x915;&#x93f;&#x92e;">&#x938;&#x93f;&#x915;&#x94d;&#x915;&#x93f;&#x92e;</option>
+							<option value="&#x924;&#x92e;&#x93f;&#x932;&#x928;&#x93e;&#x921;&#x941;">&#x924;&#x92e;&#x93f;&#x932;&#x928;&#x93e;&#x921;&#x941;</option>
+							<option value="&#x924;&#x947;&#x932;&#x902;&#x917;&#x93e;&#x928;&#x93e;">&#x924;&#x947;&#x932;&#x902;&#x917;&#x93e;&#x928;&#x93e;</option>
+							<option value="&#x924;&#x94d;&#x930;&#x93f;&#x92a;&#x941;&#x930;&#x93e;">&#x924;&#x94d;&#x930;&#x93f;&#x92a;&#x941;&#x930;&#x93e;</option>
+							<option value="&#x909;&#x924;&#x94d;&#x924;&#x930;&#x93e;&#x916;&#x902;&#x921;">&#x909;&#x924;&#x94d;&#x924;&#x930;&#x93e;&#x916;&#x902;&#x921;</option>
+							<option value="&#x909;&#x924;&#x94d;&#x924;&#x930;&#x20;&#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;">&#x909;&#x924;&#x94d;&#x924;&#x930; &#x92a;&#x94d;&#x930;&#x926;&#x947;&#x936;</option>
+							<option value="&#x92a;&#x936;&#x94d;&#x91a;&#x93f;&#x92e;&#x20;&#x92c;&#x902;&#x917;&#x93e;&#x932;">&#x92a;&#x936;&#x94d;&#x91a;&#x93f;&#x92e; &#x92c;&#x902;&#x917;&#x93e;&#x932;</option>
+							<option value="&#x905;&#x902;&#x921;&#x92e;&#x93e;&#x928;&#x20;&#x935;&#x20;&#x928;&#x94b;&#x915;&#x94b;&#x92c;&#x93e;&#x930;&#x20;&#x926;&#x94d;&#x935;&#x940;&#x92a;&#x20;&#x938;&#x92e;&#x942;&#x939;">&#x905;&#x902;&#x921;&#x92e;&#x93e;&#x928; &#x935; &#x928;&#x94b;&#x915;&#x94b;&#x92c;&#x93e;&#x930; &#x926;&#x94d;&#x935;&#x940;&#x92a; &#x938;&#x92e;&#x942;&#x939;</option>
+							<option value="&#x91a;&#x902;&#x921;&#x940;&#x917;&#x922;&#x93c;">&#x91a;&#x902;&#x921;&#x940;&#x917;&#x922;&#x93c;</option>
+							<option value="&#x926;&#x93e;&#x926;&#x930;&#x93e;&#x20;&#x914;&#x930;&#x20;&#x928;&#x917;&#x930;&#x20;&#x939;&#x935;&#x947;&#x932;&#x940;">&#x926;&#x93e;&#x926;&#x930;&#x93e; &#x914;&#x930; &#x928;&#x917;&#x930; &#x939;&#x935;&#x947;&#x932;&#x940;</option>
+							<option value="&#x926;&#x92e;&#x928;&#x20;&#x914;&#x930;&#x20;&#x926;&#x940;&#x935;">&#x926;&#x92e;&#x928; &#x914;&#x930; &#x926;&#x940;&#x935;</option>
+							<option value="&#x926;&#x93f;&#x932;&#x94d;&#x932;&#x940;">&#x926;&#x93f;&#x932;&#x94d;&#x932;&#x940;</option>
+							<option value="&#x932;&#x915;&#x94d;&#x937;&#x926;&#x94d;&#x935;&#x940;&#x92a;">&#x932;&#x915;&#x94d;&#x937;&#x926;&#x94d;&#x935;&#x940;&#x92a;</option>
+							<option value="&#x92a;&#x941;&#x926;&#x941;&#x91a;&#x947;&#x930;&#x940;">&#x92a;&#x941;&#x926;&#x941;&#x91a;&#x947;&#x930;&#x940;</option>
+							</select><p id="Dropdown_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
+							</div><div class="zf-clearBoth"></div></li>
+							<!---------section ends---------->
+							<li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">जिला 
+							<em class="zf-important">*</em>
+							</label>
+							<div class="zf-tempContDiv"><span> <input class="form-control" type="text" name="SingleLine1" checktype="c1" value="" maxlength="255" fieldType=1 /></span> <p id="SingleLine1_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
 							</div><div class="zf-clearBoth"></div></li><!---------Single Line Ends Here---------->
+							<!---------Email Starts Here---------->  
+							<li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">ईमेल 
+							</label>
+							<div class="zf-tempContDiv"><span> <input class="form-control" fieldType=9  type="text" maxlength="255" name="Email" checktype="c5" value=""/></span> <p id="Email_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
+							</div><div class="zf-clearBoth"></div></li><!---------Email Ends Here---------->  
 							<!---------Multiple Line Starts Here---------->
 							<li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">आप इस वेबिनार से क्या सीखना चाहते हैं ? 
 							</label>
-							<div class="zf-tempContDiv"><textarea class="w-100 form-control" name="MultiLine" checktype="c1" maxlength="65535" rows="10"></textarea><p id="MultiLine_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-							</div></li><!---------Multiple Line Ends Here---------->
+							<div class="zf-tempContDiv"><span> <textarea class="form-control" name="MultiLine" checktype="c1" maxlength="65535"></textarea> </span><p id="MultiLine_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
+							</div><div class="zf-clearBoth"></div></li>
+							<!---------Multiple Line Ends Here---------->
 						</ul>
 						<div align="center">
 							<button class="btn btn-success">Submit</button>
@@ -297,8 +343,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <script type="text/javascript">var zf_DateRegex = new RegExp("^(([0][1-9])|([1-2][0-9])|([3][0-1]))[-](Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec|JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC)[-](?:(?:19|20)[0-9]{2})$");
-var zf_MandArray = [ "PhoneNumber_countrycode", "PhoneNumber1_countrycode", "SingleLine"]; 
-var zf_FieldArray = [ "Name_First", "Name_Last", "PhoneNumber_countrycode", "PhoneNumber1_countrycode", "Email", "SingleLine", "MultiLine"]; 
+var zf_MandArray = [ "PhoneNumber_countrycode", "PhoneNumber1_countrycode", "Dropdown", "SingleLine1"]; 
+var zf_FieldArray = [ "Name_Salutation", "Name_First", "Name_Last", "PhoneNumber_countrycode", "PhoneNumber1_countrycode", "Dropdown", "SingleLine1", "Email", "MultiLine"]; 
 var isSalesIQIntegrationEnabled = false;
 var salesIQFieldsArray = [];</script>
 <script>
@@ -562,7 +608,7 @@ var salesIQFieldsArray = [];</script>
     	}
     }
   
-  function zf_ValidateSignature(objElem) {
+  	function zf_ValidateSignature(objElem) {
   		var linkName = objElem.getAttribute("compname");
   		var canvasElem = document.getElementById("drawingCanvas-"+linkName);
   		var isValidSign = zf_IsSignaturePresent(objElem,linkName,canvasElem);
