--- a/webinar.html
+++ b/webinar.html
@@ -295,7 +295,7 @@
 							<!---------Multiple Line Ends Here---------->
 						</ul>
 						<div align="center">
-							<button class="btn btn-success">Submit</button>
+							<button class="btn btn-success">जमा करें</button>
 						</div>
 					</div>
 					</div>
