change submit and image uploaded

--- a/webinar.html
+++ b/webinar.html
@@ -91,7 +91,7 @@
 		<div class="row align-items-center">
 			<div class="col-lg-6 col-6">
 				<div class="">
-					<img src="https://www.agrevolution.in/assets/frontend/images/logo-inner.svg">
+					<img src="img/logo-hindi.png" width="120px">
 				</div>
 			</div>
 			<div class="col-lg-6 col-6">
@@ -134,7 +134,7 @@
 		</ul>
 	</div>
 </section>
-<section style="background: url('img/speakers/bg.jpg');background-size: 400%;background-position: left;">
+<section style="background-color: #fefff4;">
 	<div class="container">
 		<div class="row py-5">
 			<div class="col-md-7 col-12">
